@@ -1,3 +1,8 @@
+2008-11-14  David Athay  <ko2fan@gmail.com>
+
+	* src/interface/interfacemanager.cpp, src/interface/window.cpp,
+	src/game.cpp: Added barebones interface manager and window.
+
 2008-10-23  David Athay  <ko2fan@gmail.com>
 
 	* src/graphics/graphics.cpp, src/interface/interfacemanager.h,
